# Aarogya-sahayak

./: .gitignore  README.md  package-lock.json  package.json
backend/: app.py  pyproject.toml  requirements.txt  test_app.py
backend/instance/: aarogya_sahayak.db
backend/migrations/versions/: 9438b689e581_align_schema_rename_tables_and_add_.py  c4cd02d3c886_initial_schema.py  dfa921c5170e_add_user_model.py  e3d41416b2db_add_temperature_and_oxygen_level_to_.py  f5333c1259ce_add_created_at_and_updated_at_columns_.py
backend/models/: health_content.py  health_worker.py  reminder.py  user.py  vitals.py
backend/routes/: auth.py  health_feed.py  health_workers.py  reminders.py  vitals.py
backend/templates/: Test1.html  home.html  index.css  login.html  register.html
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Chat.tsx  Home.tsx  Login.tsx  Register.tsx  Reminders.tsx  Vitals.tsx  Welcome.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
